syntax = "proto3";

message MarkerIds{
  repeated int32 ids = 1;
}
message Endpoint
{
  string address = 1;
  int32 port = 2;
}

message State {
  map<string, MarkerIds> robots = 1;
  map<string, Endpoint> collectors = 2;

  bool connected = 3;
  string url = 4;
  repeated double camera_matrix = 5;
  repeated double distortion_matrix = 6;
  int32 marker_dictionary = 7;
  map<string, bool> options = 8;
}